# readings-etl

./: .gitignore  Makefile  README.md  workspace.yaml
.github/workflows/: lint-python.yml  lint-sql.yml  validate-compose.yml  validate-docker-image.yml
compose-mcdonalds/: .env.example  docker-compose.yml
dagster/: Dockerfile  requirements.txt
dagster/dagster_home/: dagster.yaml
dagster/project/: README.md  pyproject.toml
dagster/project/src/project/defs/: __init__.py  app.py
dagster/project/src/project/defs/assets/: __init__.py  data_transformations.py  dwh_dimensions.py  operations_assets.py  source_assets.py
dagster/project/src/project/defs/jobs/: __init__.py  fact_operations_tables_job.py  readings_ingestion.py  refresh_dimensions_job.py
dagster/project/src/project/defs/resources/: __init__.py  spark.py  spark_df_io_manager.py  sql_server.py  sql_server_dimensions.py  transformation_ops.py
dagster/project/src/project/defs/schedules/: __init__.py  factoperations_scheduler.py  readings_scheduler.py
dagster/project/src/project/defs/sensors/: __init__.py  dwh_dimensions_sensor.py
dagster/project/src/project/defs/transformations/: __init__.py  cuartos_congelacion.py  cuartos_refrigeracion.py  factReadingsMeasurement_device.py  factlecturas_extended.py  luces.py  maquinas_nieve.py  maquinas_soda.py  raw_dimensions.py  stats_calculator.py  stats_calculator_time_window.py  termostatos.py
spark/: Dockerfile
sql/init/: IngestionControl.sql  dimDerivedStatus.sql  dimensions.sql  factHourlyDeviceStatus.sql  factHourlyReadingStatus.sql  readings.sql
(+5 files in other folders)
